syntax = "proto3";

package redfox.api.gvks;

import "idl_common/types.proto";

option go_package = "github.com/krafton-hq/red-fox/apis/gvks";

service GroupVersionKindServer {
  rpc GetGroupVersionKind(idl_common.SingleObjectReq) returns (GetGroupVersionKindRes) {}
  rpc ListGroupVersionKinds(idl_common.ListObjectReq) returns (ListGroupVersionKindsRes) {}
  rpc CreateGroupVersionKind(CreateGroupVersionKindReq) returns (CreateGroupVersionKindRes) {}
  rpc DeleteGroupVersionKind(idl_common.SingleObjectReq) returns (idl_common.CommonRes) {}
}

message GroupVersionKind {
  string apiVersion = 1;
  string kind = 2;
  idl_common.ObjectMeta metadata = 3;
  GroupVersionKindSpec spec = 4;
}

message GroupVersionKindSpec {
  string scope = 1;
  idl_common.GroupVersionKindSpec detail = 2;
}

message GetGroupVersionKindRes {
  idl_common.CommonRes commonRes = 1;
  GroupVersionKind gvk = 2;
}

message ListGroupVersionKindsRes {
  idl_common.CommonRes commonRes = 1;
  repeated GroupVersionKind gvks = 2;
}

message CreateGroupVersionKindReq {
  idl_common.CommonReq commonReq = 1;
  idl_common.GroupVersionKindSpec gvkSpec = 2;
}

message CreateGroupVersionKindRes {
  idl_common.CommonRes commonRes = 1;
  GroupVersionKind gvk = 2;
}
