syntax = "proto3";

package redfox.api.idl_common;

option go_package = "github.com/krafton-hq/red-fox/apis/idl_common";

message CommonReq {
}

message CommonRes {
  ResultCode Status = 1;
  string Message = 2;
}

message ObjectMeta {
  string name = 1;
  map<string, string> labels = 2;
  map<string, string> annotations = 3;
  string namespace = 4;
}

message ApiResourceSpec {
  string name = 1;
  Scope scope = 2;
  GroupVersionKindSpec gvk = 3;
}

enum Scope {
  Cluster = 0;
  Namespaced = 1;
}

message GroupVersionKindSpec {
  string group = 1;
  string version = 2;
  string kind = 3;
}

message SingleObjectReq {
  string name = 1;
  optional string namespace = 2;
}

message ListObjectReq {
  string namespace = 1;
  map<string, string> labelSelectors = 2;
}

enum ResultCode {
  SUCCESS = 0;

  // 10000 common
  FAILED = 10001;
  UNKNOWN = 10002;
  INVALID_ARGUMENT = 10003;
  INVALID_PASSWORD = 10004;
  UNAUTHORIZED = 10005;
  INVALID_ACCOUNT = 10006;
  UNAVAILABLE = 10007;
  INTERNAL = 10008;
  CANCELED = 10009;
  NOT_FOUND = 10010;
  AUTH_TOKEN_EXPIRED = 10011;
  ALREADY_LINKED_PLATFORM_ID = 10012;
  NO_PERMISSION_ACCOUNT = 10013;
  RESTRICTED_LOGIN = 10014;
  BANNED = 10015;
  UNAUTHORIZED_EMAIL = 10016;
  DELETED_ACCOUNT = 10017;
  SERVER_BUSY = 10018;
  SERVER_SERVICE_OFF = 10019;
}
